fixtures/negative/invalid_sa_empty.sam
@SQ	SN:MT	LN:16569
bad-sa-empty	0	MT	100	60	10M10S	*	0	0	AAAAAAAAAAAAAAAAAAAA	IIIIIIIIIIIIIIIIIIII	SA:Z:
